QScrollBar Fix

--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -315,6 +315,11 @@ height:3px;
 background:#fff;
 }
 
+QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical { /* Remove Up and Down Arrows from UI */
+width:0px;
+height:0px;
+}
+
 /*******************************************************/
 
 /* DIALOG BOXES */
